Fix scrollbar color

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 20px #161616;
+    border-radius: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0 10px #000000;
+}
+
 .titilium {
   font-family: 'Titillium Web', sans-serif;
 }
